samples/_failures_safe/1761651520_f2d0dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0341776.c: In function ‘main’:
./samples/SAFE/__tmp_c0341776.c:162:5: error: expected expression at end of input
  162 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_c0341776.c:162:5: error: expected declaration or statement at end of input
